--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.1",
     "chalk": "^4.1.2",
     "express": "^4.18.2",
+    "iconv-lite": "^0.6.3",
     "node-cmd": "^5.0.0",
     "pako": "^2.0.4",
     "ws": "^8.9.0"
