--- a/client/lnkdecoder/package.json
+++ b/client/lnkdecoder/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "windows-shortcuts",
-  "version": "0.1.6",
+  "name": "lnkdecoder",
+  "version": "0.0.1",
   "description": "Create, edit, and query Windows shortcuts (.lnk files)",
   "scripts": {
     "test": "node test/test.js"
