--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "body-parser": "^1.20.1",
     "chalk": "^4.1.2",
     "express": "^4.18.2",
+    "express-http-proxy": "^1.6.3",
     "express-ws": "^5.0.2",
+    "http-proxy-middleware": "^2.0.6",
     "iconv-lite": "^0.6.3",
     "node-cmd": "^5.0.0",
     "node-fetch": "^2.6.6",
     "pako": "^2.0.4",
-    "ws": "^8.9.0"
+    "proxy-middleware": "^0.15.0"
   }
 }
